--- a/Project.ipynb
+++ b/Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMoI2tKep9wm30mJDJhl3iM",
+      "authorship_tag": "ABX9TyM1Q1ICsS9x8W503SMdNBHI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,8 +25,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/donghwi2022/ds-section1-project/blob/main/Untitled3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/donghwi2022/ds-section1-project/blob/main/Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 다음 분기에 어떤 게임을 설계해야 할까"
+      ],
+      "metadata": {
+        "id": "8Dorug8dPvsI"
+      }
     },
     {
       "cell_type": "code",
@@ -36,8 +45,38 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#한글 깨짐문제 해결\n",
+        "!sudo apt-get install -y fonts-nanum\n",
+        "!sudo fc-cache -fv\n",
+        "!rm ~/.cache/matplotlib -rf\n",
+        "\n",
+        "plt.rc('font', family='NanumBarunGothic')"
+      ],
+      "metadata": {
+        "id": "Q8blmUpCQRFb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/datasets/vgames2.csv\"\n",
+        "df = pd.read_csv(url)\n",
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "QEGElHR5QRKQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
