Colaboratory를 통해 생성됨

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM1Q1ICsS9x8W503SMdNBHI",
+      "authorship_tag": "ABX9TyPhwnKnqMxRSDBa4fKMWC17",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,17 @@
       ],
       "metadata": {
         "id": "8Dorug8dPvsI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Part 1. 필요 라이브러리 및 데이터 로드**\n",
+        "- 필요 라이브러리 import 및 한글 깨짐문제 해결\n",
+        "- csv 파일 load"
+      ],
+      "metadata": {
+        "id": "Hki1AimITVfd"
       }
     },
     {
@@ -68,12 +79,72 @@
     {
       "cell_type": "code",
       "source": [
+        "# url로 필요 csv 파일 불러오기\n",
         "url = \"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/datasets/vgames2.csv\"\n",
         "df = pd.read_csv(url)\n",
         "df.head()"
       ],
       "metadata": {
         "id": "QEGElHR5QRKQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Part 2. 데이터 전처리 진행**"
+      ],
+      "metadata": {
+        "id": "PQDOoe-jTMKv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "id": "6AXTNZpWUXOA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 첫번째 column은 index를 나타내므로 해당 열 제거\n",
+        "df.drop('Unnamed: 0', axis = 1, inplace = True)\n",
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "BtOYOoH9Uznb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 결측치의 존재 확인\n",
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "rjpoT5rdVwEh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 데이터 양이 충분하므로, 결측치가 존재하는 데이터 삭제\n",
+        "df.dropna(inplace = True)\n",
+        "df = df.reset_index()\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "id": "xOTfDmfcXJZp"
       },
       "execution_count": null,
       "outputs": []
