Colaboratory를 통해 생성됨

--- a/project.ipynb
+++ b/project.ipynb
@@ -6,7 +6,7 @@
       "name": "section1_project.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPhwnKnqMxRSDBa4fKMWC17",
+      "authorship_tag": "ABX9TyMwq7K8S5zeClIFiWorxIkW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
         "!sudo fc-cache -fv\n",
         "!rm ~/.cache/matplotlib -rf\n",
         "\n",
-        "plt.rc('font', family='NanumBarunGothic')"
+        "plt.rc('font', family='NanumBarunGothic');"
       ],
       "metadata": {
         "id": "Q8blmUpCQRFb"
@@ -126,7 +126,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 결측치의 존재 확인\n",
+        "# 결측치 확인\n",
         "df.isnull().sum()"
       ],
       "metadata": {
@@ -140,11 +140,77 @@
       "source": [
         "# 데이터 양이 충분하므로, 결측치가 존재하는 데이터 삭제\n",
         "df.dropna(inplace = True)\n",
-        "df = df.reset_index()\n",
         "df.info()"
       ],
       "metadata": {
         "id": "xOTfDmfcXJZp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 중복값 확인(게임 명, 지원되는 플랫폼, 출시 연도, 장르, 게임회사 명이 같은 row는 중복데이터로 간주)\n",
+        "df[df.duplicated(['Name', 'Platform', 'Year', 'Genre', 'Publisher'])]"
+      ],
+      "metadata": {
+        "id": "Zrz23yuneFQo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 중복되는 데이터 확인\n",
+        "df[(df.Name == 'Madden NFL 13') & (df.Platform == 'PS3') & (df.Year == 2012.0) & (df.Genre == 'Sports') & (df.Publisher == 'Electronic Arts')]"
+      ],
+      "metadata": {
+        "id": "zmlOCC-4kUN8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 중복되는 데이터 중 정확한 데이터를 알 수 없기 때문에 해당 row를 전부 삭제\n",
+        "duplicate_index = df[df.duplicated(['Name', 'Platform', 'Year', 'Genre', 'Publisher'])].index\n",
+        "duplicated_all_index = []\n",
+        "for i in range(len(duplicate_index)) :\n",
+        "    duplicated_data = df.loc[duplicate_index[i]].Name, df.loc[duplicate_index[i]].Platform, df.loc[duplicate_index[i]].Year, df.loc[duplicate_index[i]].Genre, df.loc[duplicate_index[i]].Publisher\n",
+        "    duplicated_all_index.extend(df[(df.Name == duplicated_data[0]) & (df.Platform == duplicated_data[1]) & (df.Year == duplicated_data[2]) & (df.Genre == duplicated_data[3]) & (df.Publisher == duplicated_data[4])].index)\n",
+        "    # append를 사용할 경우 배열에 배열을 추가할 시, 배열이 그대로 유지되지만 extend는 쪼개서 한 개씩 들어감\n",
+        "df.drop(duplicated_all_index, inplace = True)\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "id": "PBAIecAIq1hp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_1 = df.EU_Sales.str.extract(r'([^\\.\\d])')\n",
+        "df_1[0].unique()"
+      ],
+      "metadata": {
+        "id": "Z43G30-J3q83"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 출고량에 해당하는 column에서 숫자가 아닌 타입을 출력\n",
+        "df[df.EU_Sales.str.extract(r'([^\\.\\d])').notnull()].head(11)"
+      ],
+      "metadata": {
+        "id": "0IReECLgm1is"
       },
       "execution_count": null,
       "outputs": []
