Colaboratory를 통해 생성됨

--- a/project.ipynb
+++ b/project.ipynb
@@ -6,7 +6,7 @@
       "name": "section1_project.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOAMN8uXG6Dt+Ff0fH6ThVb",
+      "authorship_tag": "ABX9TyN89p6GOkiauwIqgNJ7hd7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,7 +369,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 장르로 그룹화\n",
+        "# 해당 함수 작성\n",
         "def genre_by_region(df) :\n",
         "    df_by_Genre = df.groupby(['Genre'])[['NA_Sales','EU_Sales','JP_Sales','Other_Sales']].sum() # 장르로 그룹화\n",
         "    df_by_region = df_by_Genre.transpose() # 지역별로 확인하기 전치행렬\n",
@@ -378,8 +378,8 @@
         "    df_by_region.plot.bar(figsize=(10,6))\n",
         "    plt.xlabel('지역', size = 20)\n",
         "    plt.xticks(rotation = 0, size = 15)\n",
-        "    plt.ylabel('판매량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
-        "    plt.suptitle('지역별 장르의 판매량', size = 25)\n",
+        "    plt.ylabel('출고량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
+        "    plt.suptitle('지역별 장르의 출고량', size = 25)\n",
         "    if len(df) <= 100 : \n",
         "        plt.title('by Idea Factory', size = 15)\n",
         "    else : \n",
@@ -424,24 +424,22 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "df1 = df_all.groupby(['Genre', 'Year'], as_index=False)[['Sales_Total']].sum() # 장르로 그룹화\n",
-        "df1.head()"
+        "### 연도별 장르에 변화가 있는지 확인"
       ],
       "metadata": {
-        "id": "DzNJNUm-qkLz"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "bJsfsKmyFp6a"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "df1.Genre.unique()"
+        "df1 = df_all.groupby(['Genre', 'Year'], as_index=False)[['Sales_Total']].sum() # 장르와 연도로 그룹화\n",
+        "df1.head()"
       ],
       "metadata": {
-        "id": "AhBwV9HQzFx-"
+        "id": "DzNJNUm-qkLz"
       },
       "execution_count": null,
       "outputs": []
@@ -454,9 +452,10 @@
         "for i in range(len(genre_list)) :\n",
         "    plt.plot(df1[df1.Genre == genre_list[i]]['Year'], df1[df1.Genre == genre_list[i]]['Sales_Total'], label = genre_list[i])\n",
         "    plt.xlabel('연도', size = 20)\n",
-        "    plt.ylabel('판매량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
+        "    plt.ylabel('출고량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
         "    plt.xticks(range(2012, 2017, 1))\n",
-        "    plt.legend()"
+        "    plt.legend()\n",
+        "    plt.title('연도에 따른 장르별 출고량 변화', size = 20)"
       ],
       "metadata": {
         "id": "IjzHnYeIvZl_"
@@ -465,9 +464,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 연도별 플랫폼에 변화가 있는지 확인"
+      ],
+      "metadata": {
+        "id": "7eaGaMnVFzAT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "df2 = df_all.groupby(['Platform', 'Year'], as_index=False)[['Sales_Total']].sum() # 장르로 그룹화\n",
+        "df2 = df_all.groupby(['Platform', 'Year'], as_index=False)[['Sales_Total']].sum() # 플랫폼과 연도로 그룹화\n",
         "df2.head()"
       ],
       "metadata": {
@@ -479,24 +487,15 @@
     {
       "cell_type": "code",
       "source": [
-        "df2.Platform.unique()"
-      ],
-      "metadata": {
-        "id": "hNNkK85o7-yB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "genre_list = df2.Platform.unique()\n",
+        "platform_list = df2.Platform.unique()\n",
         "plt.figure(figsize = (10, 6))\n",
-        "for i in range(len(genre_list)) :\n",
-        "    plt.plot(df2[df2.Platform == genre_list[i]]['Year'], df2[df2.Platform == genre_list[i]]['Sales_Total'], label = genre_list[i])\n",
+        "for i in range(len(platform_list)) :\n",
+        "    plt.plot(df2[df2.Platform == platform_list[i]]['Year'], df2[df2.Platform == platform_list[i]]['Sales_Total'], label = platform_list[i])\n",
         "    plt.xlabel('연도', size = 20)\n",
-        "    plt.ylabel('판매량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
-        "    plt.legend()"
+        "    plt.ylabel('출고량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
+        "    plt.xticks(range(2012, 2017, 1))\n",
+        "    plt.legend()\n",
+        "    plt.title('연도에 따른 플랫폼별 출고량 변화', size = 20)"
       ],
       "metadata": {
         "id": "Zq4sm0Gp7wFT"
@@ -507,10 +506,11 @@
     {
       "cell_type": "code",
       "source": [
-        "df_all[df_all.Year >= 2017]"
+        "## 지워야 하는 코드\n",
+        "df2[df2.Year == 2012]"
       ],
       "metadata": {
-        "id": "PdD7JHr-CCna"
+        "id": "dkH4r1sIIha6"
       },
       "execution_count": null,
       "outputs": []
@@ -523,6 +523,71 @@
       "metadata": {
         "id": "Ih80dojAIaIh"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 전체 게임을 출고량이 높은 순서대로 게임 이름을 정렬\n",
+        "df_sales = df_all.groupby(['Name'], as_index=False)[['Sales_Total']].sum()\n",
+        "df_sales.sort_values('Sales_Total', ascending = False, inplace = True)\n",
+        "df_sales"
+      ],
+      "metadata": {
+        "id": "cWEVQZVhJNli"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Idea Factory의 게임을 출고량이 높은 순서대로 게임 이름을 정렬\n",
+        "df_sales_co = df_co.groupby(['Name'], as_index=False)[['Sales_Total']].sum()\n",
+        "df_sales_co.sort_values('Sales_Total', ascending = False, inplace = True)\n",
+        "df_sales_co"
+      ],
+      "metadata": {
+        "id": "eNkqBzFaPa0U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 전체 게임중 출고량이 가장 높은 3개와 회사에서 출고량이 가장 높은 1개를 저장\n",
+        "sales_top1 = df_all[df_all.Name == 'Grand Theft Auto V']\n",
+        "sales_top2 = df_all[df_all.Name == 'Call of Duty: Black Ops II']\n",
+        "sales_top3 = df_all[df_all.Name == 'Call of Duty: Ghosts']\n",
+        "sales_co_top = df_all[df_all.Name == 'Hyperdevotion Noire: Goddess Black Heart']"
+      ],
+      "metadata": {
+        "id": "JA1qyixtKKj1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_all[df_all.Name == 'Call of Duty: Black Ops II'] "
+      ],
+      "metadata": {
+        "id": "UOEqoqGCKpwp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_all[df_all.Name == 'Call of Duty: Ghosts']"
+      ],
+      "metadata": {
+        "id": "9MNwQptyKyVw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
