Colaboratory를 통해 생성됨

--- a/project.ipynb
+++ b/project.ipynb
@@ -6,7 +6,7 @@
       "name": "section1_project.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN89p6GOkiauwIqgNJ7hd7r",
+      "authorship_tag": "ABX9TyOjPXrnVSYbBrXFejqXPH4q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,9 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from scipy import stats"
       ]
     },
     {
@@ -277,6 +279,18 @@
     {
       "cell_type": "code",
       "source": [
+        "# 데이터프레임 인덱스 재설정\n",
+        "df.reset_index(drop=True, inplace = True)"
+      ],
+      "metadata": {
+        "id": "NHrKrjJPgZj9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 최종 데이터 형태 확인\n",
         "df.info()"
       ],
@@ -314,8 +328,8 @@
       "source": [
         "# df = 전체 데이터, df_co = 내가 정한 회사의 데이터\n",
         "# 다음 분기를 계획하는 것이기 때문에 최근 10년의 데이터를 바탕으로 기획 진행\n",
-        "df_all = df[(df.Year >= 2012) & (df.Year < 2017)]\n",
-        "df_co = df[(df.Year >= 2012) & (df.Year < 2017) & (df.Publisher == 'Idea Factory')]\n",
+        "df_all = df[(df.Year >= 2012) & (df.Year < 2017)].reset_index(drop=True)\n",
+        "df_co = df[(df.Year >= 2012) & (df.Year < 2017) & (df.Publisher == 'Idea Factory')].reset_index(drop=True)\n",
         "df_co.info()"
       ],
       "metadata": {
@@ -417,6 +431,108 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### + 위의 그래프를 통해 해답을 얻을 수 있지만, 가설 검증을 통해 한 번 더 확인해보기\n"
+      ],
+      "metadata": {
+        "id": "nJdj6fwGcIR_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "지역에 따라 선호하는 장르에 차이가 있는지를 출고량을 통해 확인하려고 한다. <br>\n",
+        "같은 장르일때 지역에 따라 출고량이 "
+      ],
+      "metadata": {
+        "id": "aLv1c_9TvAdl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 지역에 따라 같은 장르의 출고량에 차이가 있는지 확인하는 함수 작성\n",
+        "def compare_sales (sample1, sample2) : \n",
+        "    # 등분산성 여부 확인\n",
+        "    if stats.levene(sample1, sample2).pvalue < 0.05 :\n",
+        "        equal_var_value = False\n",
+        "    else :\n",
+        "        equal_var_value = True\n",
+        "    statistic, p_value = stats.ttest_ind(sample1, sample2, equal_var = equal_var_value)\n",
+        "    pvalue = round(p_value, 2)\n",
+        "    if pvalue >= 0.05 :\n",
+        "        print('pvalue : {}'.format(pvalue))\n",
+        "        print('pvalue가 0.05 이상이므로 귀무가설을 기각하지 않고 귀무가설을 택한다.')\n",
+        "    else :\n",
+        "        print('pvalue : {}'.format(pvalue))\n",
+        "        print('pvalue가 0.05 미만이므로 귀무가설을 기각하고 대립가설을 택한다.')"
+      ],
+      "metadata": {
+        "id": "DwYn1YNvqU-h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "귀무가설 : Action 장르의 북미 출고량과 유럽 출고량에 차이가 없다.<br>\n",
+        "대립가설 : Action 장르의 북미 출고량과 유럽 출고량에 차이가 있다."
+      ],
+      "metadata": {
+        "id": "3sLarpZIvaD9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "na_sales = df_all[df_all['Genre'] == 'Action'].NA_Sales\n",
+        "eu_sales = df_all[df_all['Genre'] == 'Action'].EU_Sales\n",
+        "\n",
+        "compare_sales (na_sales, eu_sales)"
+      ],
+      "metadata": {
+        "id": "I_c41MpduPuw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "귀무가설 : Action 장르의 유럽 출고량과 일본 출고량에 차이가 없다.<br>\n",
+        "대립가설 : Action 장르의 유럽 출고량과 일본 출고량에 차이가 있다."
+      ],
+      "metadata": {
+        "id": "4fVIvNefvnuV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "eu_sales = df_all[df_all['Genre'] == 'Action'].EU_Sales\n",
+        "jp_sales = df_all[df_all['Genre'] == 'Action'].JP_Sales\n",
+        "\n",
+        "compare_sales (eu_sales, jp_sales)"
+      ],
+      "metadata": {
+        "id": "R1ORPit5nxpz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "결론 : Action 장르의 유럽 출고량과 일본 출고량에 차이가 있기 때문에 지역에 따라 선호하는 장르가 다르다고 할 수 있다."
+      ],
+      "metadata": {
+        "id": "e-qr1hZFxIvg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## **Question 2. 연도별 게임의 트렌드가 있을까**"
       ],
       "metadata": {
@@ -451,11 +567,12 @@
         "plt.figure(figsize = (10, 6))\n",
         "for i in range(len(genre_list)) :\n",
         "    plt.plot(df1[df1.Genre == genre_list[i]]['Year'], df1[df1.Genre == genre_list[i]]['Sales_Total'], label = genre_list[i])\n",
-        "    plt.xlabel('연도', size = 20)\n",
-        "    plt.ylabel('출고량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
-        "    plt.xticks(range(2012, 2017, 1))\n",
-        "    plt.legend()\n",
-        "    plt.title('연도에 따른 장르별 출고량 변화', size = 20)"
+        "plt.xlabel('연도', size = 20)\n",
+        "plt.ylabel('출고량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
+        "plt.xticks(range(2012, 2017, 1))\n",
+        "plt.legend()\n",
+        "plt.title('연도에 따른 장르별 출고량 변화', size = 20)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "IjzHnYeIvZl_"
@@ -491,11 +608,12 @@
         "plt.figure(figsize = (10, 6))\n",
         "for i in range(len(platform_list)) :\n",
         "    plt.plot(df2[df2.Platform == platform_list[i]]['Year'], df2[df2.Platform == platform_list[i]]['Sales_Total'], label = platform_list[i])\n",
-        "    plt.xlabel('연도', size = 20)\n",
-        "    plt.ylabel('출고량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
-        "    plt.xticks(range(2012, 2017, 1))\n",
-        "    plt.legend()\n",
-        "    plt.title('연도에 따른 플랫폼별 출고량 변화', size = 20)"
+        "plt.xlabel('연도', size = 20)\n",
+        "plt.ylabel('출고량\\n(단위 : 백만)', size = 15, rotation = 0, labelpad = 40)\n",
+        "plt.xticks(range(2012, 2017, 1))\n",
+        "plt.legend()\n",
+        "plt.title('연도에 따른 플랫폼별 출고량 변화', size = 20)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "Zq4sm0Gp7wFT"
@@ -525,6 +643,64 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 우리 회사의 데이터에서 분석 및 시각화"
+      ],
+      "metadata": {
+        "id": "Cq7om9NLCfRc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Idea Factory의 게임을 출고량이 높은 순서대로 게임 이름을 정렬\n",
+        "df_sales_co = df_co.groupby(['Name', 'Genre'], as_index=False)[['Sales_Total']].sum()\n",
+        "df_sales_co.sort_values('Sales_Total', ascending = False, inplace = True)\n",
+        "df_sales_co"
+      ],
+      "metadata": {
+        "id": "eNkqBzFaPa0U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_co_sales_top = df_sales_co[(df_sales_co.Name == 'Hyperdevotion Noire: Goddess Black Heart') | (df_sales_co.Name == 'Code:Realize - Sousei no Himegimi') | (df_sales_co.Name == 'Makai Shin Trillion') | (df_sales_co.Name == 'Amnesia Later') | (df_sales_co.Name == 'Hakuouki: Yuugi Roku Ni - Matsuri Hayashi to Taishitachi')]\n",
+        "df_co_sales_top"
+      ],
+      "metadata": {
+        "id": "Ql_q84ad_mMG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.barplot(x=\"Genre\", y=\"Sales_Total\", hue=\"Name\", data=df_co_sales_top)\n",
+        "plt.title(\"장르별 게임의 출고량\")\n",
+        "plt.legend(bbox_to_anchor = (1,1))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "RUVqo5gyH-9o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 전체 게임의 데이터에서 분석 및 시각화"
+      ],
+      "metadata": {
+        "id": "jjeziFXbCmv4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 전체 게임을 출고량이 높은 순서대로 게임 이름을 정렬\n",
@@ -541,25 +717,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Idea Factory의 게임을 출고량이 높은 순서대로 게임 이름을 정렬\n",
-        "df_sales_co = df_co.groupby(['Name'], as_index=False)[['Sales_Total']].sum()\n",
-        "df_sales_co.sort_values('Sales_Total', ascending = False, inplace = True)\n",
-        "df_sales_co"
-      ],
-      "metadata": {
-        "id": "eNkqBzFaPa0U"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 전체 게임중 출고량이 가장 높은 3개와 회사에서 출고량이 가장 높은 1개를 저장\n",
-        "sales_top1 = df_all[df_all.Name == 'Grand Theft Auto V']\n",
-        "sales_top2 = df_all[df_all.Name == 'Call of Duty: Black Ops II']\n",
-        "sales_top3 = df_all[df_all.Name == 'Call of Duty: Ghosts']\n",
-        "sales_co_top = df_all[df_all.Name == 'Hyperdevotion Noire: Goddess Black Heart']"
+        "df_all_sales_top = df_all[(df_all.Name == 'Grand Theft Auto V') | (df_all.Name == 'Call of Duty: Black Ops II') | (df_all.Name == 'Call of Duty: Ghosts')]\n",
+        "df_all_sales_top"
       ],
       "metadata": {
         "id": "JA1qyixtKKj1"
@@ -570,7 +729,13 @@
     {
       "cell_type": "code",
       "source": [
-        "df_all[df_all.Name == 'Call of Duty: Black Ops II'] "
+        "# 플랫폼별 게임의 출고량 시각화\n",
+        "df_by_Platform = df_all_sales_top.groupby(['Platform', 'Name'], as_index=False)[['Sales_Total']].sum() # 장르로 그룹화\n",
+        "\n",
+        "sns.barplot(x=\"Name\", y=\"Sales_Total\", hue=\"Platform\", data=df_by_Platform)\n",
+        "plt.title(\"게임의 플랫폼별 출고량\")\n",
+        "plt.legend(bbox_to_anchor = (1,1))\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "UOEqoqGCKpwp"
@@ -581,13 +746,53 @@
     {
       "cell_type": "code",
       "source": [
-        "df_all[df_all.Name == 'Call of Duty: Ghosts']"
+        "# 장르별 게임의 출고량 시각화\n",
+        "df_by_Genre = df_all_sales_top.groupby(['Genre', 'Name'], as_index=False)[['Sales_Total']].sum() # 장르로 그룹화\n",
+        "\n",
+        "sns.barplot(x=\"Genre\", y=\"Sales_Total\", hue=\"Name\", data=df_by_Genre)\n",
+        "plt.title(\"장르별 게임의 출고량\")\n",
+        "plt.legend(bbox_to_anchor = (1,1))\n",
+        "plt.show()"
       ],
       "metadata": {
-        "id": "9MNwQptyKyVw"
+        "id": "EUhirDaJO_qS"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **결과 요약**\n",
+        "2016년 기준 <br>\n",
+        "1. 플랫폼별 출고량 순위\n",
+        "    1. PS4\n",
+        "    2. XOne\n",
+        "    3. 3DS\n",
+        "\n",
+        "2. 장르별 출고량 순위\n",
+        "    1. Action\n",
+        "    2. Shooter\n",
+        "    3. Sports <br>\n",
+        "\n",
+        "우리 회사(Idea Factory)의 출고량 순위 (괄호 안은 장르를 나타냄)\n",
+        "1. Hyperdevotion Noire: Goddess Black Heart (Role-Playing)\n",
+        "2. Code:Realize - Sousei no Himegimi (Adventure)\n",
+        "3. Makai Shin Trillion (Role-Playing)\n",
+        "4. Amnesia Later (Misc)\n",
+        "5. Hakuouki: Yuugi Roku Ni - Matsuri Hayashi to Taishitachi (Action)\n",
+        "\n",
+        "## **결론**\n",
+        "1. 2015년 이후로 게임 장르 및 지원되는 플랫폼에 따른 출고량이 하락하는 경향이 보입니다.<br>\n",
+        "2. 하지만, Action 장르의 게임이 출고량이 가장 많고 심지어 출고량 1위의 게임 장르가 2,3위의 출고량과 차이가 많이 나는 것을 확인할 수 있습니다.\n",
+        "3. 그리고 우리 회사도 회사 게임 내 5위에 머무르긴 했지만 Action 장르의 게임을 개발한 것을 확인할 수 있습니다.\n",
+        "4. 플랫폼은 PS4, XOne,3DS 가 출고량이 가장 많은 것을 확인할 수 있습니다.\n",
+        "\n",
+        "따라서, 다음 분기에는 Action 장르의 게임을 개발하는데 'PS4, XOne, 3DS' 의 플랫폼을 지원할 수 있도록 고려해야 합니다."
+      ],
+      "metadata": {
+        "id": "QnBYT3kzxfh1"
+      }
     }
   ]
 }
