Colaboratory를 통해 생성됨

--- a/project.ipynb
+++ b/project.ipynb
@@ -6,7 +6,7 @@
       "name": "section1_project.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOjPXrnVSYbBrXFejqXPH4q",
+      "authorship_tag": "ABX9TyP40jNg+DMskN7tR1GcHZ1X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -441,7 +441,7 @@
       "cell_type": "markdown",
       "source": [
         "지역에 따라 선호하는 장르에 차이가 있는지를 출고량을 통해 확인하려고 한다. <br>\n",
-        "같은 장르일때 지역에 따라 출고량이 "
+        "같은 장르일때 지역에 따라 출고량이 같으면 선호하는 장르가 같다고 생각한다."
       ],
       "metadata": {
         "id": "aLv1c_9TvAdl"
@@ -622,18 +622,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "## 지워야 하는 코드\n",
-        "df2[df2.Year == 2012]"
-      ],
-      "metadata": {
-        "id": "dkH4r1sIIha6"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## **Question 3. 출고량이 높은 게임에 대한 분석 및 시각화**"
@@ -668,7 +656,8 @@
     {
       "cell_type": "code",
       "source": [
-        "df_co_sales_top = df_sales_co[(df_sales_co.Name == 'Hyperdevotion Noire: Goddess Black Heart') | (df_sales_co.Name == 'Code:Realize - Sousei no Himegimi') | (df_sales_co.Name == 'Makai Shin Trillion') | (df_sales_co.Name == 'Amnesia Later') | (df_sales_co.Name == 'Hakuouki: Yuugi Roku Ni - Matsuri Hayashi to Taishitachi')]\n",
+        "df_co_sales_top = df_sales_co[(df_sales_co.Name == 'Hyperdevotion Noire: Goddess Black Heart') | (df_sales_co.Name == 'Code:Realize - Sousei no Himegimi') | (df_sales_co.Name == 'Makai Shin Trillion') \n",
+        "                              | (df_sales_co.Name == 'Amnesia Later') | (df_sales_co.Name == 'Hakuouki: Yuugi Roku Ni - Matsuri Hayashi to Taishitachi')]\n",
         "df_co_sales_top"
       ],
       "metadata": {
