Colaboratory를 통해 생성됨

--- a/project.ipynb
+++ b/project.ipynb
@@ -6,7 +6,7 @@
       "name": "section1_project.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP40jNg+DMskN7tR1GcHZ1X",
+      "authorship_tag": "ABX9TyNhW6p4tam9ZakZPDvyczAF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -656,8 +656,9 @@
     {
       "cell_type": "code",
       "source": [
-        "df_co_sales_top = df_sales_co[(df_sales_co.Name == 'Hyperdevotion Noire: Goddess Black Heart') | (df_sales_co.Name == 'Code:Realize - Sousei no Himegimi') | (df_sales_co.Name == 'Makai Shin Trillion') \n",
-        "                              | (df_sales_co.Name == 'Amnesia Later') | (df_sales_co.Name == 'Hakuouki: Yuugi Roku Ni - Matsuri Hayashi to Taishitachi')]\n",
+        "df_co_sales_top = df_sales_co[(df_sales_co.Name == 'Hyperdevotion Noire: Goddess Black Heart') | (df_sales_co.Name == 'Code:Realize - Sousei no Himegimi') \n",
+        "                              | (df_sales_co.Name == 'Makai Shin Trillion') | (df_sales_co.Name == 'Amnesia Later') \n",
+        "                              | (df_sales_co.Name == 'Hakuouki: Yuugi Roku Ni - Matsuri Hayashi to Taishitachi')]\n",
         "df_co_sales_top"
       ],
       "metadata": {
